# CommScores

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .stignore  LICENSE  MANIFEST.in  README.md  README.rst  flake.nix  pnas.1900102116.sd02.xlsx  pyproject.toml  setup.py
.github/workflows/: unit_test-action.yaml
CommScores.egg-info/: PKG-INFO
commscores/: GEMCompatibility.py  GSP_debugging.ipynb  __init__.py  commscores.py  commscores_class.py  commscoresutil.py  gemcompatibility.py  logger.py  mscommscores.py  report.py  scores.py  utils.py
commscores/data/: BiGG_to_MSID.json
commscores/data/categories/: allAAs.npy  all_specifiedAAs.npy  alphaKetaGlutarateAA.npy  aromaticAA.npy  complex_sugars.npy  fattyAcids.npy  oxaloacetateAA.npy  oxoAAs.npy  scfa.npy  (+4 more)
commscores/scores/: __init__.py  antismash.py  bss.py  calculate_scores.py  cip.py  fs.py  gyd.py  mip.py  mro.py  pc.py  smetana.py
data/: compoundNames.json
data/models/: GCF_001424595.1.RAST.mdl
docs/: conf.py  index.rst  requirements.txt
docs/source/: api.rst  index.rst
examples/: 10+_models_test.ipynb  FASTQ_template.csv  GEMCompatibility_changes.json  GSP_debugging.ipynb  compatibilized_model_scores.ipynb  fastq_reads_noninterleaved.csv  model_investigation.ipynb
examples/kChip/: computeCommScores.ipynb
notebooks/: BiGG_to_MSID.json  QA:QC.ipynb  gemcompt_testing.ipynb  metabolite_mapper.ipynb  tutorial.ipynb
notebooks/at_leaf/: data_analysis.ipynb  env.yml  media_prep.ipynb  rm_vit_from_media.py  utils.py
notebooks/kchip/: README.md  commscores_report.ipynb  data_analysis.ipynb  fix_model_fps.ipynb  kchip_utils.py  media_prep.ipynb  monoculture_growth.ipynb  pairwise_analysis.ipynb  utils.py
references/: Samples_list.xlsx  pnas.1900102116.sd01.xlsx
test/: CommScores_DF.csv  bss_results.json  bss_results2.json  carbonDGlucose.json  cip_results.json  costless_mip_results.json  fs_results.json  gyd_results.json  mip_results.json  mro_results.json  mro_results2.json  pc_results.json  running_new_commScores.ipynb  scores_output.json  test_commscores.py
(+369 files in other folders)
