[tool.poetry]
name = "commscores"
version = "0.1.0"
description = "A python package for quantifying microbial interactions"
authors = ["Andrew Freiburger <andrewfreiburger@gmail.com>, Dileep Kishore <kishored@ornl.gov>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
numpy = "^1.26.2"
optlang = "^1.8.1"
deepdiff = "^6.7.1"
sigfig = "^1.3.3"
scipy = "^1.11.3"
modelseedpy-freiburgermsu = "^0.3.1.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
