[tool.poetry]
name = "commscores"
version = "0.1.0"
description = "A python package for quantifying microbial interactions"
authors = ["Andrew Freiburger <andrewfreiburger@gmail.com>, Dileep Kishore <kishored@ornl.gov>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
numpy = "^1.24.4"
optlang = "^1.8.1"
deepdiff = "^6.7.1"
sigfig = "^1.3.3"
modelseedpy =  { git = "https://github.com/freiburgermsu/ModelSEEDpy.git", branch = "main" }
h5py = "^3.11.0"
pandas = "^2.2.2"
cobra = "^0.29.0"
lxml = "^5.3.0"


[tool.poetry.group.dev.dependencies]
ipython = "^8.24.0"
jupyter = "^1.0.0"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
xlrd = "^2.0.1"
shap = "^0.46.0"
catboost = "^1.2.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
